--- a/hml/m.html
+++ b/hml/m.html
@@ -8,13 +8,15 @@
 </head>
 <body>
 
-    <img src="img/1.jpg" alt="tufail"><br> 
+    <img src="../project 1/pr1/img/1..jpg" alt="tufail" style="height: 200px; width: 250px;"><br> 
 
     <ol type="I">
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
     </ol>
+
+    
 
     <!-- Moved table outside of <ol> -->
     <table width="600" height="100" bgcolor="yellow" border="1" cellspacing="0">
